Allow wider images